--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,18 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <!-- <script src="jpalette.js"></script> -->
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-W31WJ66YEF"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+        gtag('config', 'G-W31WJ66YEF');
+    </script>
     <title>React App</title>
 </head>
 
